--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -23,9 +23,10 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@prisma/client": "^5.11.0",
+    "api-contract": "*",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1",
-    "api-contract": "*"
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
