--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -9,11 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "solid-js": "^1.8.15",
-    "api-contract": "*"
+    "@tanstack/solid-query": "^4.36.1",
+    "@ts-rest/core": "^3.40.1",
+    "@ts-rest/solid-query": "^3.39.1",
+    "api-contract": "*",
+    "solid-js": "^1.8.15"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^25.0.7",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
     "vite-plugin-solid": "^2.10.2"
