--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@kobalte/core": "^0.12.6",
-    "@tanstack/solid-query": "^4.35.7",
     "@solidjs/router": "^0.13.1",
+    "@tanstack/solid-query": "^4.35.7",
     "@ts-rest/core": "^3.40.1",
     "@ts-rest/solid-query": "^3.39.1",
     "api-contract": "*",
@@ -21,15 +21,15 @@
     "i18next-browser-languagedetector": "^7.2.1",
     "i18next-http-backend": "^2.5.0",
     "i18next-xhr-backend": "^3.2.2",
-    "install": "^0.13.0",
     "solid-icons": "^1.1.0",
     "solid-js": "^1.8.15",
     "solid-sonner": "^0.2.5",
     "tailwind-merge": "^2.2.2",
-    "tailwindcss-animate": "^1.0.7",
-    "uninstall": "^0.0.0"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@locator/babel-jsx": "^0.4.3",
+    "@locator/runtime": "^0.4.3",
     "@rollup/plugin-commonjs": "^25.0.7",
     "@types/node": "^20.12.3",
     "autoprefixer": "^10.4.19",
