--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -16,6 +16,7 @@
     "@solid-primitives/storage": "^3.5.0",
     "@solidjs/router": "^0.13.1",
     "@tanstack/solid-query": "^4.35.7",
+    "@tanstack/solid-table": "^8.16.1",
     "@ts-rest/core": "^3.40.1",
     "@ts-rest/solid-query": "^3.39.1",
     "api-contract": "*",
