--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -26,6 +26,7 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/serve-static": "^4.0.2",
     "@ngneat/falso": "^7.2.0",
     "@prisma/client": "^5.11.0",
     "@ts-rest/nest": "^3.38.0",
