--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -13,5 +13,6 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20.x'
+      - run: npx prisma generate
       - run: npm ci
       - run: npm run build --if-present
