--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -13,6 +13,6 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20.x'
-      - run: npx prisma generate
       - run: npm ci
-      - run: npm run build --if-present
+      - run: cd apps/api && npx prisma generate
+      - run: cd ../.. && npm run build --if-present
