--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -15,4 +15,4 @@ jobs:
           node-version: '20.x'
       - run: npm ci
       - run: cd apps/api && npx prisma generate
-      - run: cd npm run build --if-present
+      - run: npm run build --if-present
