change the data in the home page

--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -19,10 +19,12 @@
     "@tanstack/solid-table": "^8.16.1",
     "@ts-rest/core": "^3.40.1",
     "@ts-rest/solid-query": "^3.39.1",
+    "apexcharts": "^3.49.1",
     "api-contract": "*",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "corvu": "^0.5.0",
+    "solid-apexcharts": "^0.3.4",
     "solid-js": "^1.8.15",
     "solid-toast": "^0.5.0",
     "tailwind-merge": "^2.2.2",
