--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -12,6 +12,7 @@
     "@corvu/tailwind": "^0.1.4",
     "@kobalte/core": "^0.12.6",
     "@solid-primitives/i18n": "^2.1.1",
+    "@solid-primitives/media": "^2.2.9",
     "@solid-primitives/pagination": "^0.3.0",
     "@solid-primitives/storage": "^3.5.0",
     "@solidjs/router": "^0.13.1",
